[package]
name = "icx-asset"
version = "0.10.1"
authors = ["DFINITY Stiftung <sdk@dfinity.org>"]
edition = "2018"
description = "CLI tool to manage assets on an asset canister on the Internet Computer."
homepage = "https://docs.rs/icx-asset"
documentation = "https://docs.rs/icx-asset"
license = "Apache-2.0"
readme = "README.md"
categories = ["command-line-interface"]
keywords = ["internet-computer", "agent", "icp", "dfinity", "asset"]
include = ["src", "Cargo.toml", "../LICENSE", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.34"
candid = "0.7.4"
chrono = "0.4.19"
clap = "=3.0.0-beta.2"
clap_derive = "=3.0.0-beta.2"
delay = "0.3.1"
garcon = "0.2.2"
humantime = "2.0.1"
ic-agent = { path = "../ic-agent", version = "0.10" }
ic-asset = { path = "../ic-asset", version = "0.10" }
ic-types = "0.2.2"
ic-utils = { path = "../ic-utils", version = "0.10" }
libflate = "1.1.1"
num-traits = "0.2"
pem = "1.0.1"
serde = "1.0.115"
serde_bytes = "0.11.5"
serde_json = "1.0.57"
tokio = { version = "1.2.0", features = ["full", "rt"] }
thiserror = "1.0.24"
walkdir = "2.3.1"
