[package]
name = "icx-cert"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true
description = "CLI tool to download a document from the Internet Computer and pretty-print the contents of its IC-Certificate header."
homepage = "https://docs.rs/icx-cert"
documentation = "https://docs.rs/icx-cert"
readme = "README.md"
categories = ["command-line-interface"]
keywords = ["internet-computer", "agent", "icp", "dfinity", "certificate"]
include = ["src", "Cargo.toml", "../LICENSE", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
base64 = "0.13"
clap = { version = "3.1.8", features = ["derive", "cargo"] }
chrono = "0.4.19"
hex = { workspace = true }
ic-agent = { path = "../ic-agent", version = "0.23", default-features = false }
leb128 = "0.2.4"
reqwest = { version = "0.11", features = ["blocking", "rustls-tls"] }
sha2 = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_bytes = { workspace = true }
serde_cbor = { workspace = true }
ic-certification = { path = "../ic-certification", version = "0.23" }
