[package]
name = "icx-cert"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true
description = "CLI tool to download a document from the Internet Computer and pretty-print the contents of its IC-Certificate header."
homepage = "https://docs.rs/icx-cert"
documentation = "https://docs.rs/icx-cert"
readme = "README.md"
categories = ["command-line-interface"]
keywords = ["internet-computer", "agent", "icp", "dfinity", "certificate"]
include = ["src", "Cargo.toml", "../LICENSE", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
base64 = "0.22"
clap = { workspace = true, features = ["derive", "cargo", "color"] }
hex.workspace = true
ic-certification.workspace = true
leb128.workspace = true
reqwest = { version = "0.12", default-features = false, features = [
    "blocking",
    "rustls-tls",
] }
sha2.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_bytes.workspace = true
serde_cbor.workspace = true
time = { workspace = true, features = ["formatting"] }
