[package]
name = "icx-http-server"
version = "0.1.0"
authors = ["DFINITY Stiftung <sdk@dfinity.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = "0.6.15"
clap = "3.0.0-beta.2"
delay = "0.3.1"
hyper = { version = "0.14.4", features = ["full"] }
ic-agent = { path = "../ic-agent" }
ic-types = { path = "../ic-types" }
ic-utils = { path = "../ic-utils" }
tokio = { version = "1.2.0", features = ["full"] }
serde = "1.0.115"
serde_json = "1.0.57"
url = "2.2.1"
