[package]
name = "icx-http-server"
version = "0.1.0"
authors = ["DFINITY Stiftung <sdk@dfinity.org>"]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
homepage = "https://sdk.dfinity.org"
documentation = "https://docs.rs/icx-http-server"
categories = ["command-line-utilities", "web-programming::http-server"]
keywords = ["internet-computer", "http-server", "dfinity"]
include = ["src", "Cargo.toml", "../LICENSE", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = "0.6.15"
clap = "3.0.0-beta.2"
delay = "0.3.1"
hyper = { version = "0.14.4", features = ["full"] }
hyper-tls = "0.5.0"
ic-agent = { path = "../ic-agent", version = "0.2" }
ic-types = { path = "../ic-types", version = "0.1" }
ic-utils = { path = "../ic-utils", version = "0.2" }
tokio = { version = "1.2.0", features = ["full"] }
serde = "1.0.115"
serde_json = "1.0.57"
url = "2.2.1"
