[package]
name = "icx-proxy"
version = "0.2.0"
authors = ["DFINITY Stiftung <sdk@dfinity.org>"]
edition = "2018"
description = "CLI tool to create an HTTP proxy to the Internet Computer."
homepage = "https://docs.rs/icx-proxy"
documentation = "https://docs.rs/icx-proxy"
license = "Apache-2.0"
readme = "README.md"
categories = ["command-line-interface", "web-programming::http-server"]
keywords = ["internet-computer", "agent", "icp", "dfinity", "proxy"]
include = ["src", "Cargo.toml", "../LICENSE", "README.md"]

[[bin]]
name = "icx-proxy"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.34"
candid = "0.6.21"
clap = "3.0.0-beta.2"
delay = "0.3.1"
hex = "0.4.3"
hyper = "0.13.10"
hyper-tls = "0.4.3"
socket2 = { version = "0.3.19", features = ["reuseport"] }
ic-agent = { path = "../ic-agent", version = "0.4" }
ic-types = { path = "../ic-types", version = "0.1.2" }
ic-utils = { path = "../ic-utils", version = "0.3" }
tokio = { version = "0.2.25", features = ["full"] }
serde = "1.0.115"
serde_json = "1.0.57"
slog = { version = "2.7.0", features = ["max_level_trace"] }
slog-async = "2.6.0"
slog-term = "2.8.0"
url = "2.2.1"
