[package]
name = "icx-proxy"
version = "0.6.0"
authors = ["DFINITY Stiftung <sdk@dfinity.org>"]
edition = "2018"
description = "CLI tool to create an HTTP proxy to the Internet Computer."
homepage = "https://docs.rs/icx-proxy"
documentation = "https://docs.rs/icx-proxy"
license = "Apache-2.0"
readme = "README.md"
categories = ["command-line-interface", "web-programming::http-server"]
keywords = ["internet-computer", "agent", "icp", "dfinity", "proxy"]
include = ["src", "Cargo.toml", "../LICENSE", "README.md"]

[[bin]]
name = "icx-proxy"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.34"
clap = "=3.0.0-beta.2"
clap_derive = "=3.0.0-beta.2"
garcon = { version = "0.2.3", features = ["async"] }
hex = "0.4.3"
hyper = { version = "0.14.11", features = ["full"] }
hyper-tls = "0.5.0"
ic-agent = { path = "../ic-agent", version = "0.8" }
ic-utils = { path = "../ic-utils", version = "0.6" }
tokio = { version = "1.8.1", features = ["full"] }
serde = "1.0.115"
serde_json = "1.0.57"
slog = { version = "2.7.0", features = ["max_level_trace"] }
slog-async = "2.7.0"
slog-term = "2.8.0"
url = "2.2.1"
