[package]
name = "icx"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true
description = "CLI tool to call canisters on the Internet Computer."
homepage = "https://docs.rs/icx"
documentation = "https://docs.rs/icx"
readme = "README.md"
categories = ["command-line-interface", "web-programming::http-client"]
keywords = ["internet-computer", "agent", "icp", "dfinity", "call"]
include = ["src", "Cargo.toml", "../LICENSE", "README.md"]

[[bin]]
name = "icx"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
candid = { workspace = true, features = ["value"] }
candid_parser = { workspace = true }
clap = { workspace = true }
hex = { workspace = true }
humantime = { workspace = true }
ic-agent = { workspace = true, default-features = true }
ic-ed25519 = { workspace = true }
ic-utils = { workspace = true }
pocket-ic = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
