[package]
name = "ref-tests"
version = "0.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = "0.8.0"
ic-agent = { path = "../ic-agent" }
ic-identity-hsm = { path = "../ic-identity-hsm" }
ic-utils = { path = "../ic-utils", features = ["raw"] }
ring = "0.16.11"
serde = { version = "1.0.101", features = ["derive"] }
sha2 = "0.10"
tokio = { version = "1.8.1", features = ["full"] }

[dev-dependencies]
serde_cbor = "0.11.1"
