[package]
name = "ref-tests"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = { workspace = true }
ic-agent = { path = "../ic-agent" }
ic-identity-hsm = { path = "../ic-identity-hsm" }
ic-utils = { path = "../ic-utils", features = ["raw"] }
ring = { workspace = true }
serde = { workspace = true, features = ["derive"] }
sha2 = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]
serde_cbor = { workspace = true }
